# AI_Labs

./: README.md
Documents/: Implementation.md  Specification_Document.md  Testing_Document.md  User_guide.md
Weekly Report/: week1Report.md  week_2_report.md  week_3_report.md  week_4_report.md  week_5_report.md
src/game/gomoku/: README.md  ai.py  gomoku.py  pyproject.toml
src/game/gomoku/minimax/: minmax.py
src/game/gomoku/tests/: test.py  test_gomoku.py
